--- a/public/watcheslist.html
+++ b/public/watcheslist.html
@@ -8,6 +8,7 @@
         color: white;
         text-align: center;
         font-size: 300%;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
       }
     </style>
 
@@ -15,9 +16,8 @@
   <body>
 
     <div class="Container">
-        <!-- <img src="./image/userlist.jpg" class="img1"> -->
+      
         <div id="d1" class="d1"></div>
-        <!-- <div id="d2"></div> -->
         
     </div>
 
