--- a/public/user.html
+++ b/public/user.html
@@ -51,6 +51,18 @@
         opacity: 0.9;
       }
 
+      .img4{
+        position: absolute;
+        top: 90%;
+        left: 32%;
+        font-size: 300%;
+        color: white;
+        /* opacity: 0; */
+        background-color: black;
+        border: 0px;
+      }
+
+
     </style>
   </head>
   <body onload="showUserWatch()">
@@ -61,13 +73,11 @@
         <div id="d1" class="img2"></div>
         <a id="a1" class="img3"></a>
       </div>
-      <button onclick="toUserList()">返回我的账户</button>
+      <button onclick="toUserList()" class="img4">
+          . Back To My Account ---
+      </button>
 
     <script>
-      // console.log(decodeURI(window.location))
-      // var urlStr = decodeURI(window.location)
-      // var unameFirstIndex = urlStr.search("uname=")
-      // uname.innerHTML = urlStr.slice(unameFirstIndex+6)
       function showUserWatch(){
         var xhr = new XMLHttpRequest()
         xhr.onreadystatechange= ()=>{
@@ -76,7 +86,7 @@
             var obj = JSON.parse(result)
             console.log(obj)
             if(obj.addWatch=="error"){
-              window.location.href=`${window.location.origin}/fail.html`
+              // window.location.href=`${window.location.origin}/fail.html`
               console.log(obj.addWatch)
             }else{
               uname.innerHTML=obj.uname
